@@ -1,5 +1,5 @@
 /*
- * Copyright 2010-2020 Alfresco Software, Ltd.
+ * Copyright 2010-2026 Hyland Software, Inc. and its affiliates.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -13,11 +13,9 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
-
 package org.activiti.engine.impl.bpmn.deployer;
 
 import java.util.List;
-
 import org.activiti.bpmn.model.BpmnModel;
 import org.activiti.bpmn.model.EventDefinition;
 import org.activiti.bpmn.model.FlowElement;
@@ -44,14 +42,19 @@ import org.activiti.engine.impl.util.CollectionUtil;
  */
 public class EventSubscriptionManager {
 
-    protected void removeObsoleteEventSubscriptionsImpl(ProcessDefinitionEntity processDefinition,
-                                                        String eventHandlerType) {
+    protected void removeObsoleteEventSubscriptionsImpl(
+        ProcessDefinitionEntity processDefinition,
+        String eventHandlerType
+    ) {
         // remove all subscriptions for the previous version
-        EventSubscriptionEntityManager eventSubscriptionEntityManager = Context.getCommandContext().getEventSubscriptionEntityManager();
+        EventSubscriptionEntityManager eventSubscriptionEntityManager =
+            Context.getCommandContext().getEventSubscriptionEntityManager();
         List<EventSubscriptionEntity> subscriptionsToDelete =
-                eventSubscriptionEntityManager.findEventSubscriptionsByTypeAndProcessDefinitionId(eventHandlerType,
-                                                                                                  processDefinition.getId(),
-                                                                                                  processDefinition.getTenantId());
+            eventSubscriptionEntityManager.findEventSubscriptionsByTypeAndProcessDefinitionId(
+                eventHandlerType,
+                processDefinition.getId(),
+                processDefinition.getTenantId()
+            );
 
         for (EventSubscriptionEntity eventSubscriptionEntity : subscriptionsToDelete) {
             eventSubscriptionEntityManager.delete(eventSubscriptionEntity);
@@ -61,14 +64,15 @@ public class EventSubscriptionManager {
     protected void removeObsoleteMessageEventSubscriptions(ProcessDefinitionEntity previousProcessDefinition) {
         // remove all subscriptions for the previous version
         if (previousProcessDefinition != null) {
-            removeObsoleteEventSubscriptionsImpl(previousProcessDefinition,
-                                                 MessageEventHandler.EVENT_HANDLER_TYPE);
+            removeObsoleteEventSubscriptionsImpl(previousProcessDefinition, MessageEventHandler.EVENT_HANDLER_TYPE);
         }
     }
 
     protected void removeExistingSignalStartEventSubscriptions() {
-        EventSubscriptionEntityManager eventSubscriptionEntityManager = Context.getCommandContext().getEventSubscriptionEntityManager();
-        List<SignalEventSubscriptionEntity> subscriptionsToDelete = eventSubscriptionEntityManager.findSignalStartEventSubscriptions();
+        EventSubscriptionEntityManager eventSubscriptionEntityManager =
+            Context.getCommandContext().getEventSubscriptionEntityManager();
+        List<SignalEventSubscriptionEntity> subscriptionsToDelete =
+            eventSubscriptionEntityManager.findSignalStartEventSubscriptions();
         for (EventSubscriptionEntity eventSubscriptionEntity : subscriptionsToDelete) {
             eventSubscriptionEntityManager.delete(eventSubscriptionEntity);
         }
@@ -77,34 +81,34 @@ public class EventSubscriptionManager {
     protected void removeObsoleteSignalEventSubScription(ProcessDefinitionEntity previousProcessDefinition) {
         // remove all subscriptions for the previous version
         if (previousProcessDefinition != null) {
-            removeObsoleteEventSubscriptionsImpl(previousProcessDefinition,
-                                                 SignalEventHandler.EVENT_HANDLER_TYPE);
+            removeObsoleteEventSubscriptionsImpl(previousProcessDefinition, SignalEventHandler.EVENT_HANDLER_TYPE);
         }
     }
 
     protected void removeExistingMessageStartEventSubscriptions() {
-        EventSubscriptionEntityManager eventSubscriptionEntityManager = Context.getCommandContext().getEventSubscriptionEntityManager();
-        List<MessageEventSubscriptionEntity> subscriptionsToDelete = eventSubscriptionEntityManager.findMessageStartEventSubscriptions();
+        EventSubscriptionEntityManager eventSubscriptionEntityManager =
+            Context.getCommandContext().getEventSubscriptionEntityManager();
+        List<MessageEventSubscriptionEntity> subscriptionsToDelete =
+            eventSubscriptionEntityManager.findMessageStartEventSubscriptions();
         for (EventSubscriptionEntity eventSubscriptionEntity : subscriptionsToDelete) {
             eventSubscriptionEntityManager.delete(eventSubscriptionEntity);
         }
     }
 
-    protected void addMessageEventSubscriptions(ProcessDefinitionEntity processDefinition,
-                                                Process process,
-                                                BpmnModel bpmnModel) {
+    protected void addMessageEventSubscriptions(
+        ProcessDefinitionEntity processDefinition,
+        Process process,
+        BpmnModel bpmnModel
+    ) {
         if (process != null && CollectionUtil.isNotEmpty(process.getFlowElements())) {
             for (FlowElement element : process.getFlowElements()) {
                 if (element instanceof StartEvent) {
                     StartEvent startEvent = (StartEvent) element;
                     if (CollectionUtil.isNotEmpty(startEvent.getEventDefinitions())) {
-                        EventDefinition eventDefinition = startEvent.getEventDefinitions().get(0);
+                        EventDefinition eventDefinition = startEvent.getEventDefinitions().getFirst();
                         if (eventDefinition instanceof MessageEventDefinition) {
                             MessageEventDefinition messageEventDefinition = (MessageEventDefinition) eventDefinition;
-                            insertMessageEvent(messageEventDefinition,
-                                               startEvent,
-                                               processDefinition,
-                                               bpmnModel);
+                            insertMessageEvent(messageEventDefinition, startEvent, processDefinition, bpmnModel);
                         }
                     }
                 }
@@ -112,10 +116,12 @@ public class EventSubscriptionManager {
         }
     }
 
-    protected void insertMessageEvent(MessageEventDefinition messageEventDefinition,
-                                      StartEvent startEvent,
-                                      ProcessDefinitionEntity processDefinition,
-                                      BpmnModel bpmnModel) {
+    protected void insertMessageEvent(
+        MessageEventDefinition messageEventDefinition,
+        StartEvent startEvent,
+        ProcessDefinitionEntity processDefinition,
+        BpmnModel bpmnModel
+    ) {
         CommandContext commandContext = Context.getCommandContext();
         if (bpmnModel.containsMessageId(messageEventDefinition.getMessageRef())) {
             Message message = bpmnModel.getMessage(messageEventDefinition.getMessageRef());
@@ -123,21 +129,35 @@ public class EventSubscriptionManager {
         }
 
         // look for subscriptions for the same name in db:
-        List<EventSubscriptionEntity> subscriptionsForSameMessageName = commandContext.getEventSubscriptionEntityManager()
-                .findEventSubscriptionsByName(MessageEventHandler.EVENT_HANDLER_TYPE,
-                                              messageEventDefinition.getMessageRef(),
-                                              processDefinition.getTenantId());
+        List<EventSubscriptionEntity> subscriptionsForSameMessageName = commandContext
+            .getEventSubscriptionEntityManager()
+            .findEventSubscriptionsByName(
+                MessageEventHandler.EVENT_HANDLER_TYPE,
+                messageEventDefinition.getMessageRef(),
+                processDefinition.getTenantId()
+            );
 
         for (EventSubscriptionEntity eventSubscriptionEntity : subscriptionsForSameMessageName) {
             // throw exception only if there's already a subscription as start event
-            if (eventSubscriptionEntity.getProcessInstanceId() == null || eventSubscriptionEntity.getProcessInstanceId().isEmpty()) { // processInstanceId != null or not empty -> it's a message related to an execution
+            if (
+                eventSubscriptionEntity.getProcessInstanceId() == null ||
+                eventSubscriptionEntity.getProcessInstanceId().isEmpty()
+            ) {
+                // processInstanceId != null or not empty -> it's a message related to an execution
                 // the event subscription has no instance-id, so it's a message start event
-                throw new ActivitiException("Cannot deploy process definition '" + processDefinition.getResourceName()
-                                                    + "': there already is a message event subscription for the message with name '" + messageEventDefinition.getMessageRef() + "'.");
+                throw new ActivitiException(
+                    "Cannot deploy process definition '" +
+                    processDefinition.getResourceName() +
+                    "': there already is a message event subscription for the message with name '" +
+                    messageEventDefinition.getMessageRef() +
+                    "'."
+                );
             }
         }
 
-        MessageEventSubscriptionEntity newSubscription = commandContext.getEventSubscriptionEntityManager().createMessageEventSubscription();
+        MessageEventSubscriptionEntity newSubscription = commandContext
+            .getEventSubscriptionEntityManager()
+            .createMessageEventSubscription();
         newSubscription.setEventName(messageEventDefinition.getMessageRef());
         newSubscription.setActivityId(startEvent.getId());
         newSubscription.setConfiguration(processDefinition.getId());
@@ -150,19 +170,23 @@ public class EventSubscriptionManager {
         commandContext.getEventSubscriptionEntityManager().insert(newSubscription);
     }
 
-    protected void addSignalEventSubscriptions(CommandContext commandContext,
-                                               ProcessDefinitionEntity processDefinition,
-                                               Process process,
-                                               BpmnModel bpmnModel) {
+    protected void addSignalEventSubscriptions(
+        CommandContext commandContext,
+        ProcessDefinitionEntity processDefinition,
+        Process process,
+        BpmnModel bpmnModel
+    ) {
         if (process != null && CollectionUtil.isNotEmpty(process.getFlowElements())) {
             for (FlowElement element : process.getFlowElements()) {
                 if (element instanceof StartEvent) {
                     StartEvent startEvent = (StartEvent) element;
                     if (CollectionUtil.isNotEmpty(startEvent.getEventDefinitions())) {
-                        EventDefinition eventDefinition = startEvent.getEventDefinitions().get(0);
+                        EventDefinition eventDefinition = startEvent.getEventDefinitions().getFirst();
                         if (eventDefinition instanceof SignalEventDefinition) {
                             SignalEventDefinition signalEventDefinition = (SignalEventDefinition) eventDefinition;
-                            SignalEventSubscriptionEntity subscriptionEntity = commandContext.getEventSubscriptionEntityManager().createSignalEventSubscription();
+                            SignalEventSubscriptionEntity subscriptionEntity = commandContext
+                                .getEventSubscriptionEntityManager()
+                                .createSignalEventSubscription();
                             Signal signal = bpmnModel.getSignal(signalEventDefinition.getSignalRef());
                             if (signal != null) {
                                 subscriptionEntity.setEventName(signal.getName());
