@@ -1,5 +1,5 @@
 /*
- * Copyright 2010-2020 Alfresco Software, Ltd.
+ * Copyright 2010-2026 Hyland Software, Inc. and its affiliates.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -13,7 +13,6 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
-
 package org.activiti.engine.impl.util;
 
 import java.util.Collection;
@@ -22,7 +21,6 @@ import java.util.LinkedList;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
-
 import org.activiti.bpmn.model.BpmnModel;
 import org.activiti.bpmn.model.EventDefinition;
 import org.activiti.bpmn.model.EventSubProcess;
@@ -38,6 +36,7 @@ import org.activiti.engine.delegate.Expression;
 import org.activiti.engine.delegate.event.ActivitiEventDispatcher;
 import org.activiti.engine.delegate.event.ActivitiEventType;
 import org.activiti.engine.delegate.event.impl.ActivitiEventBuilder;
+import org.activiti.engine.impl.ProcessInstanceCreationOptions;
 import org.activiti.engine.impl.context.Context;
 import org.activiti.engine.impl.el.ExpressionManager;
 import org.activiti.engine.impl.interceptor.CommandContext;
@@ -52,20 +51,26 @@ import org.activiti.engine.runtime.ProcessInstance;
  */
 public class ProcessInstanceHelper {
 
-    public ProcessInstance createAndStartProcessInstance(ProcessDefinition processDefinition,
-                                                         String businessKey, String processInstanceName,
-                                                         Map<String, Object> variables, Map<String, Object> transientVariables) {
-        return createAndStartProcessInstance(processDefinition, businessKey, processInstanceName, variables, transientVariables, true);
-    }
-
     public Process getActiveProcess(ProcessDefinition processDefinition) {
         if (ProcessDefinitionUtil.isProcessDefinitionSuspended(processDefinition.getId())) {
-            throw new ActivitiException("Cannot start process instance. Process definition " + processDefinition.getName() + " (id = " + processDefinition.getId() + ") is suspended");
+            throw new ActivitiException(
+                "Cannot start process instance. Process definition " +
+                processDefinition.getName() +
+                " (id = " +
+                processDefinition.getId() +
+                ") is suspended"
+            );
         }
 
         Process process = ProcessDefinitionUtil.getProcess(processDefinition.getId());
         if (process == null) {
-            throw new ActivitiException("Cannot start process instance. Process model " + processDefinition.getName() + " (id = " + processDefinition.getId() + ") could not be found");
+            throw new ActivitiException(
+                "Cannot start process instance. Process model " +
+                processDefinition.getName() +
+                " (id = " +
+                processDefinition.getId() +
+                ") could not be found"
+            );
         }
         return process;
     }
@@ -78,16 +83,18 @@ public class ProcessInstanceHelper {
         return initialFlowElement;
     }
 
-    protected ProcessInstance createAndStartProcessInstance(ProcessDefinition processDefinition,
-                                                            String businessKey, String processInstanceName,
-                                                            Map<String, Object> variables, Map<String, Object> transientVariables, boolean startProcessInstance) {
+    public ProcessInstance createAndStartProcessInstance(ProcessInstanceCreationOptions options) {
 
-        Process process = this.getActiveProcess(processDefinition);
+        Process process = this.getActiveProcess(options.getProcessDefinition());
+        FlowElement initialFlowElement = this.getInitialFlowElement(process, options.getProcessDefinition().getId());
 
-        FlowElement initialFlowElement = this.getInitialFlowElement(process, processDefinition.getId());
 
-        return createAndStartProcessInstanceWithInitialFlowElement(processDefinition, businessKey,
-            processInstanceName, initialFlowElement, process, variables, transientVariables, startProcessInstance);
+        return createAndStartProcessInstanceWithInitialFlowElement(
+            options,
+            initialFlowElement,
+            process,
+            true
+            );
     }
 
     public ProcessInstance createProcessInstance(ProcessDefinition processDefinition, String businessKey,
@@ -97,27 +104,62 @@ public class ProcessInstanceHelper {
         Process process = this.getActiveProcess(processDefinition);
         FlowElement initialFlowElement = this.getInitialFlowElement(process, processDefinition.getId());
 
-        ExecutionEntity processInstance = createProcessInstanceWithInitialFlowElement(processDefinition,
+        ExecutionEntity processInstance = createProcessInstanceWithInitialFlowElement(
+            processDefinition,
             businessKey,
             processInstanceName,
             initialFlowElement,
             process);
+
+        processInstance.setTransientVariables(transientVariables != null ? transientVariables : Map.of());
+        processInstance.setVariables(variables != null ? variables : Map.of());
+
         return processInstance;
     }
 
-    public ProcessInstance createAndStartProcessInstanceByMessage(ProcessDefinition processDefinition, String businessKey, String messageName,
-                                                                  Map<String, Object> messageVariables, Map<String, Object> transientVariables) {
-
+    public ProcessInstance createAndStartProcessInstanceByMessage(
+        ProcessInstanceCreationOptions options,
+        String messageName
+    ) {
+        ProcessDefinition processDefinition = options.getProcessDefinition();
+        String businessKey = options.getBusinessKey();
+        Map<String, Object> messageVariables = options.getVariables();
+        Map<String, Object> transientVariables = options.getTransientVariables();
+        String linkedProcessInstanceId = options.getLinkedProcessInstanceId();
+        String linkedProcessInstanceType = options.getLinkedProcessInstanceType();
         Process process = this.getActiveProcess(processDefinition);
 
+        FlowElement initialFlowElement = findMessageStartEvent(messageName, processDefinition, process);
+
+        // Create process instance with executions but defer to start process after dispatching ACTIVITY_MESSAGE_RECEIVED
+        ExecutionEntity processInstance = createProcessInstanceWithInitialFlowElement(
+            processDefinition,
+            businessKey,
+            null,
+            initialFlowElement,
+            process);
+
+        dispatchStartMessageReceivedEvent(processInstance, messageName, messageVariables);
+
+        CommandContext commandContext = Context.getCommandContext();
+        startProcessInstance(processInstance, commandContext, messageVariables, initialFlowElement, transientVariables, linkedProcessInstanceId, linkedProcessInstanceType);
+
+        return processInstance;
+    }
+
+    private static FlowElement findMessageStartEvent(String messageName, ProcessDefinition processDefinition, Process process) {
         FlowElement initialFlowElement = null;
         BpmnModel bpmnModel = ProcessDefinitionUtil.getBpmnModel(processDefinition.getId());
         for (FlowElement flowElement : process.getFlowElements()) {
             if (flowElement instanceof StartEvent) {
                 StartEvent startEvent = (StartEvent) flowElement;
-                if (CollectionUtil.isNotEmpty(startEvent.getEventDefinitions()) && startEvent.getEventDefinitions().get(0) instanceof MessageEventDefinition) {
-
-                    MessageEventDefinition messageEventDefinition = (MessageEventDefinition) startEvent.getEventDefinitions().get(0);
+                if (
+                    CollectionUtil.isNotEmpty(startEvent.getEventDefinitions()) &&
+                    startEvent.getEventDefinitions().getFirst() instanceof MessageEventDefinition
+                ) {
+                    MessageEventDefinition messageEventDefinition = (MessageEventDefinition) startEvent
+                        .getEventDefinitions()
+                        .getFirst();
                     String messageRef = messageEventDefinition.getMessageRef();
                     // FIXME: We should not need to reset eventDefinition messageRef to message name
                     if (bpmnModel.containsMessageId(messageRef)) {
@@ -132,26 +174,14 @@ public class ProcessInstanceHelper {
             }
         }
         if (initialFlowElement == null) {
-            throw new ActivitiException("No message start event found for process definition " + processDefinition.getId() + " and message name " + messageName);
+            throw new ActivitiException(
+                "No message start event found for process definition " +
+                processDefinition.getId() +
+                " and message name " +
+                    messageName
+            );
         }
-
-        Map<String, Object> processVariables = messageVariables;
-
-        // Create process instance with executions but defer to start process after dispatching ACTIVITY_MESSAGE_RECEIVED
-        ExecutionEntity processInstance = createProcessInstanceWithInitialFlowElement(processDefinition,
-            businessKey,
-            null,
-            initialFlowElement,
-            process);
-
-        // Dispatch message received event
-        dispatchStartMessageReceivedEvent(processInstance, messageName, messageVariables);
-
-        // Finally start the process
-        CommandContext commandContext = Context.getCommandContext();
-        startProcessInstance(processInstance, commandContext, processVariables, initialFlowElement, transientVariables);
-
-        return processInstance;
+        return initialFlowElement;
     }
 
     private void updateProcessInstanceStartDate(ExecutionEntity processInstance) {
@@ -159,36 +189,43 @@ public class ProcessInstanceHelper {
         commandContext.getExecutionEntityManager().updateProcessInstanceStartDate(processInstance);
     }
 
-    public ProcessInstance createAndStartProcessInstanceWithInitialFlowElement(ProcessDefinition processDefinition,
-                                                                               String businessKey, String processInstanceName, FlowElement initialFlowElement,
-                                                                               Process process, Map<String, Object> variables, Map<String, Object> transientVariables, boolean startProcessInstance) {
+    public ProcessInstance createAndStartProcessInstanceWithInitialFlowElement(
+        ProcessInstanceCreationOptions options, FlowElement initialFlowElement, Process process, boolean startProcessInstance
+    ) {
 
-        ExecutionEntity processInstance = createProcessInstanceWithInitialFlowElement(processDefinition,
-            businessKey,
-            processInstanceName,
+        ExecutionEntity processInstance = createProcessInstanceWithInitialFlowElement(
+            options.getProcessDefinition(),
+            options.getBusinessKey(),
+            options.getProcessInstanceName(),
             initialFlowElement,
             process);
         if (startProcessInstance) {
             CommandContext commandContext = Context.getCommandContext();
-            startProcessInstance(processInstance, commandContext, variables, initialFlowElement, transientVariables);
+            startProcessInstance(processInstance, commandContext, options.getVariables(), initialFlowElement,  options.getTransientVariables(), options.getLinkedProcessInstanceId(), options.getLinkedProcessInstanceType());
         }
 
         return processInstance;
     }
 
-    private void recordStartProcessInstance(CommandContext commandContext, FlowElement initialFlowElement, ExecutionEntity processInstance){
+    private void recordStartProcessInstance(
+        CommandContext commandContext,
+        FlowElement initialFlowElement,
+        ExecutionEntity processInstance
+    ) {
         updateProcessInstanceStartDate(processInstance);
         commandContext.getHistoryManager().recordProcessInstanceStart(processInstance, initialFlowElement);
     }
 
-    private void createProcessVariables(ExecutionEntity processInstance,
-        Map<String, Object> variables, Map<String, Object> transientVariables,
-        Process process){
+    private void createProcessVariables(
+        ExecutionEntity processInstance,
+        Map<String, Object> variables,
+        Map<String, Object> transientVariables,
+        Process process
+    ) {
         processInstance.setVariables(processDataObjects(process.getDataObjects()));
         // Set the variables passed into the start command
         if (variables != null) {
             for (String varName : variables.keySet()) {
-
                 processInstance.setVariable(varName, variables.get(varName));
             }
         }
@@ -201,14 +238,26 @@ public class ProcessInstanceHelper {
         if (Context.getProcessEngineConfiguration().getEventDispatcher().isEnabled()) {
             Context.getProcessEngineConfiguration()
                 .getEventDispatcher()
-                .dispatchEvent(ActivitiEventBuilder.createEntityWithVariablesEvent(ActivitiEventType.ENTITY_INITIALIZED,
-                    processInstance,
-                    variables,
-                    false));
+                .dispatchEvent(
+                    ActivitiEventBuilder.createEntityWithVariablesEvent(
+                        ActivitiEventType.ENTITY_INITIALIZED,
+                        processInstance,
+                        variables,
+                        false
+                    )
+                );
         }
     }
 
-    public void startProcessInstance(ExecutionEntity processInstance, CommandContext commandContext, Map<String, Object> variables, FlowElement initialFlowElement, Map<String, Object> transientVariables) {
+    public void startProcessInstance(
+        ExecutionEntity processInstance,
+        CommandContext commandContext,
+        Map<String, Object> variables,
+        FlowElement initialFlowElement,
+        Map<String, Object> transientVariables,
+        String linkedProcessInstanceId,
+        String linkedProcessInstanceType
+    ) {
         Process process = ProcessDefinitionUtil.getProcess(processInstance.getProcessDefinitionId());
         createProcessVariables(processInstance, variables, transientVariables, process);
         recordStartProcessInstance(commandContext, initialFlowElement, processInstance);
@@ -222,27 +271,38 @@ public class ProcessInstanceHelper {
                     if (subElement instanceof StartEvent) {
                         StartEvent startEvent = (StartEvent) subElement;
                         if (CollectionUtil.isNotEmpty(startEvent.getEventDefinitions())) {
-                            EventDefinition eventDefinition = startEvent.getEventDefinitions().get(0);
+                            EventDefinition eventDefinition = startEvent.getEventDefinitions().getFirst();
                             if (eventDefinition instanceof MessageEventDefinition) {
-                                MessageEventDefinition messageEventDefinition = (MessageEventDefinition) eventDefinition;
-                                BpmnModel bpmnModel = ProcessDefinitionUtil.getBpmnModel(processInstance.getProcessDefinitionId());
+                                MessageEventDefinition messageEventDefinition =
+                                    (MessageEventDefinition) eventDefinition;
+                                BpmnModel bpmnModel = ProcessDefinitionUtil.getBpmnModel(
+                                    processInstance.getProcessDefinitionId()
+                                );
                                 if (bpmnModel.containsMessageId(messageEventDefinition.getMessageRef())) {
-                                    messageEventDefinition.setMessageRef(bpmnModel.getMessage(messageEventDefinition.getMessageRef()).getName());
+                                    messageEventDefinition.setMessageRef(
+                                        bpmnModel.getMessage(messageEventDefinition.getMessageRef()).getName()
+                                    );
                                 }
-                                ExecutionEntity messageExecution = commandContext.getExecutionEntityManager().createChildExecution(processInstance);
+                                ExecutionEntity messageExecution = commandContext
+                                    .getExecutionEntityManager()
+                                    .createChildExecution(processInstance);
                                 messageExecution.setCurrentFlowElement(startEvent);
                                 messageExecution.setEventScope(true);
 
-                                String messageName = getMessageName(commandContext,
+                                String messageName = getMessageName(
+                                    commandContext,
                                     messageEventDefinition,
-                                    messageExecution);
+                                    messageExecution
+                                );
 
-                                MessageEventSubscriptionEntity subscription = commandContext.getEventSubscriptionEntityManager()
-                                    .insertMessageEvent(messageName,
-                                        messageExecution);
-                                Optional<String> correlationKey = getCorrelationKey(commandContext,
+                                MessageEventSubscriptionEntity subscription = commandContext
+                                    .getEventSubscriptionEntityManager()
+                                    .insertMessageEvent(messageName, messageExecution);
+                                Optional<String> correlationKey = getCorrelationKey(
+                                    commandContext,
                                     messageEventDefinition,
-                                    messageExecution);
+                                    messageExecution
+                                );
                                 correlationKey.ifPresent(subscription::setConfiguration);
 
                                 messageEventSubscriptions.add(subscription);
@@ -253,7 +313,7 @@ public class ProcessInstanceHelper {
             }
         }
 
-        ExecutionEntity execution = processInstance.getExecutions().get(0); // There will always be one child execution created
+        ExecutionEntity execution = processInstance.getExecutions().getFirst(); // There will always be one child execution created
 
         execution.setAppVersion(processInstance.getAppVersion());
 
@@ -261,13 +321,19 @@ public class ProcessInstanceHelper {
 
         if (Context.getProcessEngineConfiguration().getEventDispatcher().isEnabled()) {
             ActivitiEventDispatcher eventDispatcher = Context.getProcessEngineConfiguration().getEventDispatcher();
-            eventDispatcher.dispatchEvent(ActivitiEventBuilder.createProcessStartedEvent(execution, variables, false));
+            eventDispatcher.dispatchEvent(ActivitiEventBuilder.createProcessStartedEvent(execution, variables, false, linkedProcessInstanceId, linkedProcessInstanceType));
 
             for (MessageEventSubscriptionEntity messageEventSubscription : messageEventSubscriptions) {
-                commandContext.getProcessEngineConfiguration().getEventDispatcher()
-                    .dispatchEvent(ActivitiEventBuilder.createMessageWaitingEvent(messageEventSubscription.getExecution(),
-                        messageEventSubscription.getEventName(),
-                        messageEventSubscription.getConfiguration()));
+                commandContext
+                    .getProcessEngineConfiguration()
+                    .getEventDispatcher()
+                    .dispatchEvent(
+                        ActivitiEventBuilder.createMessageWaitingEvent(
+                            messageEventSubscription.getExecution(),
+                            messageEventSubscription.getEventName(),
+                            messageEventSubscription.getConfiguration()
+                        )
+                    );
             }
         }
     }
@@ -283,43 +349,42 @@ public class ProcessInstanceHelper {
         return variablesMap;
     }
 
-    protected Optional<String> getCorrelationKey(CommandContext commandContext,
-                                                 MessageEventDefinition messageEventDefinition,
-                                                 DelegateExecution execution) {
-        ExpressionManager expressionManager = commandContext.getProcessEngineConfiguration()
-            .getExpressionManager();
+    protected Optional<String> getCorrelationKey(
+        CommandContext commandContext,
+        MessageEventDefinition messageEventDefinition,
+        DelegateExecution execution
+    ) {
+        ExpressionManager expressionManager = commandContext.getProcessEngineConfiguration().getExpressionManager();
 
-        return Optional.ofNullable(messageEventDefinition.getCorrelationKey())
-            .map(correlationKey -> {
+        return Optional.ofNullable(messageEventDefinition.getCorrelationKey()).map(correlationKey -> {
                 Expression expression = expressionManager.createExpression(messageEventDefinition.getCorrelationKey());
 
-                return expression.getValue(execution)
-                    .toString();
+                return expression.getValue(execution).toString();
             });
     }
 
-    protected String getMessageName(CommandContext commandContext,
-                                    MessageEventDefinition messageEventDefinition,
-                                    DelegateExecution execution) {
-        ExpressionManager expressionManager = commandContext.getProcessEngineConfiguration()
-            .getExpressionManager();
+    protected String getMessageName(
+        CommandContext commandContext,
+        MessageEventDefinition messageEventDefinition,
+        DelegateExecution execution
+    ) {
+        ExpressionManager expressionManager = commandContext.getProcessEngineConfiguration().getExpressionManager();
 
-
-        String messageName = Optional.ofNullable(messageEventDefinition.getMessageRef())
-            .orElse(messageEventDefinition.getMessageExpression());
+        String messageName = Optional.ofNullable(messageEventDefinition.getMessageRef()).orElse(
+            messageEventDefinition.getMessageExpression()
+        );
 
         Expression expression = expressionManager.createExpression(messageName);
 
-        return expression.getValue(execution)
-            .toString();
+        return expression.getValue(execution).toString();
     }
 
-
-    public ExecutionEntity createProcessInstanceWithInitialFlowElement(ProcessDefinition processDefinition,
-                                                                       String businessKey,
-                                                                       String processInstanceName,
-                                                                       FlowElement initialFlowElement,
-                                                                       Process process) {
+    public ExecutionEntity createProcessInstanceWithInitialFlowElement(
+        ProcessDefinition processDefinition,
+        String businessKey,
+        String processInstanceName,
+        FlowElement initialFlowElement,
+        Process process) {
         CommandContext commandContext = Context.getCommandContext();
 
         // Create the process instance
@@ -328,8 +393,10 @@ public class ProcessInstanceHelper {
             initiatorVariableName = ((StartEvent) initialFlowElement).getInitiator();
         }
 
-        ExecutionEntity processInstance = commandContext.getExecutionEntityManager()
-            .createProcessInstanceExecution(processDefinition,
+        ExecutionEntity processInstance = commandContext
+            .getExecutionEntityManager()
+            .createProcessInstanceExecution(
+                processDefinition,
                 businessKey,
                 processDefinition.getTenantId(),
                 initiatorVariableName);
@@ -344,28 +411,32 @@ public class ProcessInstanceHelper {
         return processInstance;
     }
 
-    private void setProcessInstanceName(CommandContext commandContext, ExecutionEntity processInstance, String processInstanceName){
+    private void setProcessInstanceName(
+        CommandContext commandContext,
+        ExecutionEntity processInstance,
+        String processInstanceName
+    ) {
         if (processInstanceName != null) {
             processInstance.setName(processInstanceName);
-            commandContext.getHistoryManager()
+            commandContext
+                .getHistoryManager()
                 .recordProcessInstanceNameChange(processInstance.getId(), processInstanceName);
         }
     }
 
-    protected void dispatchStartMessageReceivedEvent(ExecutionEntity processInstance,
-                                                     String messageName,
-                                                     Map<String, Object> variables) {
+    protected void dispatchStartMessageReceivedEvent(
+        ExecutionEntity processInstance,
+        String messageName,
+        Map<String, Object> variables
+    ) {
         // Dispatch message received event
         if (Context.getProcessEngineConfiguration().getEventDispatcher().isEnabled()) {
             // There will always be one child execution created
-            DelegateExecution execution = processInstance.getExecutions().get(0);
-            ActivitiEventDispatcher eventDispatcher = Context.getProcessEngineConfiguration()
-                .getEventDispatcher();
-            eventDispatcher.dispatchEvent(ActivitiEventBuilder.createMessageReceivedEvent(execution,
-                messageName,
-                null,
-                variables));
+            DelegateExecution execution = processInstance.getExecutions().getFirst();
+            ActivitiEventDispatcher eventDispatcher = Context.getProcessEngineConfiguration().getEventDispatcher();
+            eventDispatcher.dispatchEvent(
+                ActivitiEventBuilder.createMessageReceivedEvent(execution, messageName, null, variables)
+            );
         }
     }
-
 }
