@@ -1,5 +1,5 @@
 /*
- * Copyright 2010-2020 Alfresco Software, Ltd.
+ * Copyright 2010-2026 Hyland Software, Inc. and its affiliates.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -13,17 +13,16 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
-
 package org.activiti.engine.test.api.event;
 
 import static java.util.Collections.singletonMap;
 import static org.activiti.engine.impl.util.CollectionUtil.map;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.tuple;
+
 import java.util.List;
 import java.util.Map;
 import java.util.stream.Collectors;
-
 import org.activiti.engine.delegate.event.ActivitiEvent;
 import org.activiti.engine.delegate.event.ActivitiEventType;
 import org.activiti.engine.delegate.event.ActivitiVariableEvent;
@@ -44,7 +43,7 @@ public class VariableEventsTest extends PluggableActivitiTestCase {
     /**
      * Test create, update and delete variables on a process-instance, using the API.
      */
-    @Deployment(resources = {"org/activiti/engine/test/api/runtime/oneTaskProcess.bpmn20.xml"})
+    @Deployment(resources = { "org/activiti/engine/test/api/runtime/oneTaskProcess.bpmn20.xml" })
     public void testProcessInstanceVariableEvents() throws Exception {
         ProcessInstance processInstance = runtimeService.startProcessInstanceByKey("oneTaskProcess");
         assertThat(processInstance).isNotNull();
@@ -52,7 +51,7 @@ public class VariableEventsTest extends PluggableActivitiTestCase {
         // Check create event
         runtimeService.setVariable(processInstance.getId(), "testVariable", "The value");
         assertThat(listener.getEventsReceived()).hasSize(1);
-        ActivitiVariableEvent event = (ActivitiVariableEvent) listener.getEventsReceived().get(0);
+        ActivitiVariableEvent event = (ActivitiVariableEvent) listener.getEventsReceived().getFirst();
         assertThat(event.getType()).isEqualTo(ActivitiEventType.VARIABLE_CREATED);
         assertThat(event.getProcessDefinitionId()).isEqualTo(processInstance.getProcessDefinitionId());
         assertThat(event.getExecutionId()).isEqualTo(processInstance.getId());
@@ -65,7 +64,7 @@ public class VariableEventsTest extends PluggableActivitiTestCase {
         // Update variable
         runtimeService.setVariable(processInstance.getId(), "testVariable", "Updated value");
         assertThat(listener.getEventsReceived()).hasSize(1);
-        event = (ActivitiVariableEvent) listener.getEventsReceived().get(0);
+        event = (ActivitiVariableEvent) listener.getEventsReceived().getFirst();
         assertThat(event.getType()).isEqualTo(ActivitiEventType.VARIABLE_UPDATED);
         assertThat(event.getProcessDefinitionId()).isEqualTo(processInstance.getProcessDefinitionId());
         assertThat(event.getExecutionId()).isEqualTo(processInstance.getId());
@@ -78,7 +77,7 @@ public class VariableEventsTest extends PluggableActivitiTestCase {
         // Delete variable
         runtimeService.removeVariable(processInstance.getId(), "testVariable");
         assertThat(listener.getEventsReceived()).hasSize(1);
-        event = (ActivitiVariableEvent) listener.getEventsReceived().get(0);
+        event = (ActivitiVariableEvent) listener.getEventsReceived().getFirst();
         assertThat(event.getType()).isEqualTo(ActivitiEventType.VARIABLE_DELETED);
         // process definition Id can't be recognized in DB flush
         assertThat(event.getProcessDefinitionId()).isEqualTo(processInstance.getProcessDefinitionId());
@@ -91,9 +90,7 @@ public class VariableEventsTest extends PluggableActivitiTestCase {
         listener.clearEventsReceived();
 
         // Create, update and delete multiple variables
-        Map<String, Object> vars = map(
-            "test", 123,
-            "test2", 456);
+        Map<String, Object> vars = map("test", 123, "test2", 456);
         runtimeService.setVariables(processInstance.getId(), vars);
         runtimeService.setVariables(processInstance.getId(), vars);
         runtimeService.removeVariables(processInstance.getId(), vars.keySet());
@@ -116,13 +113,15 @@ public class VariableEventsTest extends PluggableActivitiTestCase {
         assertThat(listener.getEventsReceived().isEmpty()).isTrue();
     }
 
-    @Deployment(resources = {"org/activiti/engine/test/api/runtime/oneTaskProcess.bpmn20.xml"})
+    @Deployment(resources = { "org/activiti/engine/test/api/runtime/oneTaskProcess.bpmn20.xml" })
     public void testStartEndProcessInstanceVariableEvents() throws Exception {
-        ProcessInstance processInstance = runtimeService.startProcessInstanceByKey("oneTaskProcess",
-                                                                                   singletonMap("var1", "value1"));
+        ProcessInstance processInstance = runtimeService.startProcessInstanceByKey(
+            "oneTaskProcess",
+            singletonMap("var1", "value1")
+        );
 
         assertThat(listener.getEventsReceived()).hasSize(1);
-        assertThat(listener.getEventsReceived().get(0).getType()).isEqualTo(ActivitiEventType.VARIABLE_CREATED);
+        assertThat(listener.getEventsReceived().getFirst().getType()).isEqualTo(ActivitiEventType.VARIABLE_CREATED);
 
         Task task = taskService.createTaskQuery().processInstanceId(processInstance.getId()).singleResult();
         taskService.complete(task.getId());
@@ -134,16 +133,17 @@ public class VariableEventsTest extends PluggableActivitiTestCase {
     /**
      * Test create event of variables when process is started with variables passed in.
      */
-    @Deployment(resources = {"org/activiti/engine/test/api/runtime/oneTaskProcess.bpmn20.xml"})
+    @Deployment(resources = { "org/activiti/engine/test/api/runtime/oneTaskProcess.bpmn20.xml" })
     public void testProcessInstanceVariableEventsOnStart() throws Exception {
-
-        ProcessInstance processInstance = runtimeService.startProcessInstanceByKey("oneTaskProcess",
-                                                                                   singletonMap("testVariable", "The value"));
+        ProcessInstance processInstance = runtimeService.startProcessInstanceByKey(
+            "oneTaskProcess",
+            singletonMap("testVariable", "The value")
+        );
         assertThat(processInstance).isNotNull();
 
         // Check create event
         assertThat(listener.getEventsReceived()).hasSize(1);
-        ActivitiVariableEvent event = (ActivitiVariableEvent) listener.getEventsReceived().get(0);
+        ActivitiVariableEvent event = (ActivitiVariableEvent) listener.getEventsReceived().getFirst();
         assertThat(event.getType()).isEqualTo(ActivitiEventType.VARIABLE_CREATED);
         assertThat(event.getProcessDefinitionId()).isEqualTo(processInstance.getProcessDefinitionId());
         assertThat(event.getExecutionId()).isEqualTo(processInstance.getId());
@@ -168,7 +168,7 @@ public class VariableEventsTest extends PluggableActivitiTestCase {
         runtimeService.setVariableLocal(child.getId(), "test", 1234567);
 
         assertThat(listener.getEventsReceived()).hasSize(1);
-        ActivitiVariableEvent event = (ActivitiVariableEvent) listener.getEventsReceived().get(0);
+        ActivitiVariableEvent event = (ActivitiVariableEvent) listener.getEventsReceived().getFirst();
         assertThat(event.getType()).isEqualTo(ActivitiEventType.VARIABLE_CREATED);
 
         // Execution and process-id should differ
@@ -187,7 +187,7 @@ public class VariableEventsTest extends PluggableActivitiTestCase {
         assertThat(listener.getEventsReceived()).hasSize(3);
 
         // Check create event
-        ActivitiVariableEvent event = (ActivitiVariableEvent) listener.getEventsReceived().get(0);
+        ActivitiVariableEvent event = (ActivitiVariableEvent) listener.getEventsReceived().getFirst();
         assertThat(event.getType()).isEqualTo(ActivitiEventType.VARIABLE_CREATED);
         assertThat(event.getProcessDefinitionId()).isEqualTo(processInstance.getProcessDefinitionId());
         assertThat(event.getExecutionId()).isEqualTo(processInstance.getId());
@@ -219,25 +219,36 @@ public class VariableEventsTest extends PluggableActivitiTestCase {
 
     @Deployment
     public void testProcessInstanceVariableEventsOnCallActivity() throws Exception {
-        runtimeService.startProcessInstanceByKey("callVariableProcess",
-                singletonMap("parentVar1", "parentVar1Value"));
+        runtimeService.startProcessInstanceByKey("callVariableProcess", singletonMap("parentVar1", "parentVar1Value"));
 
-        final List<ActivitiVariableEvent> variableEvents = listener.getEventsReceived().stream()
-                .filter(event -> event instanceof ActivitiVariableEvent).map(ActivitiVariableEvent.class::cast)
-                .collect(Collectors.toList());
-        assertThat(variableEvents).extracting(ActivitiVariableEvent::getType, ActivitiVariableEvent::getVariableName)
-                .containsExactly(tuple(ActivitiEventType.VARIABLE_CREATED, "parentVar1"),
-                        tuple(ActivitiEventType.VARIABLE_CREATED, "subVar1"),
-                        tuple(ActivitiEventType.VARIABLE_CREATED, "parentVar2"),
-                        tuple(ActivitiEventType.VARIABLE_DELETED, "subVar1"),
-                        tuple(ActivitiEventType.VARIABLE_DELETED, "parentVar2"),
-                        tuple(ActivitiEventType.VARIABLE_DELETED, "parentVar1"));
-
+        final List<ActivitiVariableEvent> variableEvents = listener
+            .getEventsReceived()
+            .stream()
+            .filter(event -> event instanceof ActivitiVariableEvent)
+            .map(ActivitiVariableEvent.class::cast)
+            .collect(Collectors.toList());
+        assertThat(variableEvents)
+            .extracting(ActivitiVariableEvent::getType, ActivitiVariableEvent::getVariableName)
+            .startsWith(
+                tuple(ActivitiEventType.VARIABLE_CREATED, "parentVar1"),
+                tuple(ActivitiEventType.VARIABLE_CREATED, "subVar1"),
+                tuple(ActivitiEventType.VARIABLE_CREATED, "parentVar2"),
+                tuple(ActivitiEventType.VARIABLE_DELETED, "subVar1")
+            );
+        // The deletion order of parentVar1 and parentVar2 is not guaranteed
+        // because they belong to the same execution and the DB query has no ORDER BY
+        assertThat(variableEvents.subList(4, 6))
+            .extracting(ActivitiVariableEvent::getType, ActivitiVariableEvent::getVariableName)
+            .containsExactlyInAnyOrder(
+                tuple(ActivitiEventType.VARIABLE_DELETED, "parentVar1"),
+                tuple(ActivitiEventType.VARIABLE_DELETED, "parentVar2")
+            );
     }
+
     /**
      * Test create, update and delete of task-local variables.
      */
-    @Deployment(resources = {"org/activiti/engine/test/api/runtime/oneTaskProcess.bpmn20.xml"})
+    @Deployment(resources = { "org/activiti/engine/test/api/runtime/oneTaskProcess.bpmn20.xml" })
     public void testTaskVariableEvents() throws Exception {
         ProcessInstance processInstance = runtimeService.startProcessInstanceByKey("oneTaskProcess");
         assertThat(processInstance).isNotNull();
@@ -251,7 +262,7 @@ public class VariableEventsTest extends PluggableActivitiTestCase {
 
         // Check create event
         assertThat(listener.getEventsReceived()).hasSize(3);
-        ActivitiVariableEvent event = (ActivitiVariableEvent) listener.getEventsReceived().get(0);
+        ActivitiVariableEvent event = (ActivitiVariableEvent) listener.getEventsReceived().getFirst();
         assertThat(event.getType()).isEqualTo(ActivitiEventType.VARIABLE_CREATED);
         assertThat(event.getProcessDefinitionId()).isEqualTo(processInstance.getProcessDefinitionId());
         assertThat(event.getProcessInstanceId()).isEqualTo(processInstance.getId());
@@ -293,7 +304,7 @@ public class VariableEventsTest extends PluggableActivitiTestCase {
         assertThat(listener.getEventsReceived()).hasSize(3);
 
         // Check create event
-        ActivitiVariableEvent event = (ActivitiVariableEvent) listener.getEventsReceived().get(0);
+        ActivitiVariableEvent event = (ActivitiVariableEvent) listener.getEventsReceived().getFirst();
         assertThat(event.getType()).isEqualTo(ActivitiEventType.VARIABLE_CREATED);
         assertThat(event.getProcessDefinitionId()).isEqualTo(processInstance.getProcessDefinitionId());
         assertThat(event.getProcessInstanceId()).isEqualTo(processInstance.getId());
@@ -330,17 +341,12 @@ public class VariableEventsTest extends PluggableActivitiTestCase {
         try {
             taskService.saveTask(newTask);
 
-            taskService.setVariable(newTask.getId(),
-                                    "testVariable",
-                                    123);
-            taskService.setVariable(newTask.getId(),
-                                    "testVariable",
-                                    456);
-            taskService.removeVariable(newTask.getId(),
-                                       "testVariable");
+            taskService.setVariable(newTask.getId(), "testVariable", 123);
+            taskService.setVariable(newTask.getId(), "testVariable", 456);
+            taskService.removeVariable(newTask.getId(), "testVariable");
 
             assertThat(listener.getEventsReceived()).hasSize(3);
-            ActivitiVariableEvent event = (ActivitiVariableEvent) listener.getEventsReceived().get(0);
+            ActivitiVariableEvent event = (ActivitiVariableEvent) listener.getEventsReceived().getFirst();
             assertThat(event.getType()).isEqualTo(ActivitiEventType.VARIABLE_CREATED);
             assertThat(event.getProcessDefinitionId()).isNull();
             assertThat(event.getExecutionId()).isNull();
@@ -368,7 +374,6 @@ public class VariableEventsTest extends PluggableActivitiTestCase {
             // deleted variable value is returned now
             assertThat(event.getVariableValue()).isEqualTo(456);
         } finally {
-
             // Cleanup task and history to ensure a clean DB after test
             // success/failure
             if (newTask.getId() != null) {
